force-app/main/default/objects/KimbleOne__TimePeriod__c/KimbleOne__TimePeriod__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__ConfigGuide</customHelpPage>
    <label>Time Period</label>
    <nameField>
        <label>Period Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Time Periods</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>