force-app/main/default/objects/KimbleOne__TimePeriod__c/fields/KimbleOne__BusinessUnitGroup__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__BusinessUnitGroup__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Business Unit Group</label>
    <referenceTo>KimbleOne__BusinessUnitGroup__c</referenceTo>
    <relationshipLabel>Time Periods</relationshipLabel>
    <relationshipName>TimePeriods</relationshipName>
    <type>Lookup</type>
</CustomField>