force-app/main/default/objects/KimbleOne__TimePeriod__c/fields/KimbleOne__EndDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__EndDate__c</fullName>
    <label>End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>