force-app/main/default/objects/KimbleOne__TimePeriod__c/fields/KimbleOne__EndOfWeek__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__EndOfWeek__c</fullName>
    <label>End Of Week</label>
    <type>Date</type>
</CustomField>