force-app/main/default/objects/KimbleOne__TimePeriod__c/fields/KimbleOne__NumberOfBusinessDays__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__NumberOfBusinessDays__c</fullName>
    <label>Number Of Business Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>