force-app/main/default/objects/KimbleOne__TimePeriod__c/fields/KimbleOne__PeriodType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__PeriodType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Period Type</label>
    <referenceTo>KimbleOne__PeriodType__c</referenceTo>
    <relationshipLabel>Time Periods</relationshipLabel>
    <relationshipName>TimePeriods</relationshipName>
    <type>Lookup</type>
</CustomField>