force-app/main/default/objects/KimbleOne__TimePeriod__c/fields/KimbleOne__Perspective__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Perspective__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Perspective</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>TimePeriodPerspective</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Time Periods (Perspective)</relationshipLabel>
    <relationshipName>TimePeriodsPerspective</relationshipName>
    <type>Lookup</type>
</CustomField>