force-app/main/default/objects/KimbleOne__TimePeriod__c/fields/KimbleOne__StartOfWeek__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__StartOfWeek__c</fullName>
    <label>Start Of Week</label>
    <type>Date</type>
</CustomField>