force-app/main/default/objects/KimbleOne__TimePeriod__c/fields/KimbleOne__UsagePattern__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__UsagePattern__c</fullName>
    <label>Usage Pattern</label>
    <length>366</length>
    <type>LongTextArea</type>
</CustomField>