force-app/main/default/objects/KimbleOne__TimePeriod__c/validationRules/KimbleOne__BDForecastingPeriodRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>KimbleOne__BDForecastingPeriodRequired</fullName>
    <active>true</active>
    <description>Business Day must be assigned to a Forecasting Time Period</description>
    <errorConditionFormula>NOT( ( KimbleOne__PeriodType__r.KimbleOne__Enum__c = &apos;BusDay&apos; &amp;&amp; KimbleOne__ForecastingTimePeriod__r.KimbleOne__PeriodType__r.KimbleOne__ForecastAtThisLevel__c )  || KimbleOne__PeriodType__r.KimbleOne__Enum__c  &lt;&gt;  &apos;BusDay&apos; )</errorConditionFormula>
    <errorMessage>Business Day must be assigned to a Forecasting Period</errorMessage>
</ValidationRule>