force-app/main/default/objects/KimbleOne__TimePeriod__c/listViews/KimbleOne__All.listView-meta.xml
<ListView>
    <fullName>KimbleOne__All</fullName>
    <columns>KimbleOne__Calendar__c</columns>
    <columns>NAME</columns>
    <columns>KimbleOne__PeriodType__c</columns>
    <columns>KimbleOne__Status__c</columns>
    <columns>KimbleOne__StartDate__c</columns>
    <columns>KimbleOne__EndDate__c</columns>
    <columns>KimbleOne__UsagePattern__c</columns>
    <columns>KimbleOne__ForecastingTimePeriod__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>