force-app/main/default/objects/KimbleOne__TimePeriod__c/listViews/KimbleOne__ReportingPerspective.listView-meta.xml
<ListView>
    <fullName>KimbleOne__ReportingPerspective</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__PeriodType__c</columns>
    <columns>KimbleOne__TrackingTimePeriod__c</columns>
    <columns>KimbleOne__ForecastingTimePeriod__c</columns>
    <columns>KimbleOne__StartDate__c</columns>
    <columns>KimbleOne__EndDate__c</columns>
    <columns>KimbleOne__NumberOfBusinessDays__c</columns>
    <columns>KimbleOne__Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>KimbleOne__Perspective__c</field>
        <operation>equals</operation>
        <value>Reporting</value>
    </filters>
    <label>Reporting Perspective</label>
    <language>en_US</language>
</ListView>