force-app/main/default/objects/KimbleOne__TimePeriod__c/listViews/VR024.listView-meta.xml
<ListView>
    <fullName>VR024</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__BusinessUnitGroup__c</columns>
    <columns>KimbleOne__EndDate__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>KimbleOne__PeriodType__c</field>
        <operation>equals</operation>
        <value>Month</value>
    </filters>
    <filters>
        <field>KimbleOne__Status__c</field>
        <operation>equals</operation>
        <value>Closed</value>
    </filters>
    <filters>
        <field>KimbleOne__StartDate__c</field>
        <operation>lessOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>KimbleOne__BusinessUnitGroup__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>VR024 Closed Months</label>
    <language>en_US</language>
</ListView>