force-app/main/default/objects/KimbleOne__TimePeriod__c/listViews/VR027.listView-meta.xml
<ListView>
    <fullName>VR027</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__BusinessUnitGroup__c</columns>
    <columns>KimbleOne__StartDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>KimbleOne__PeriodType__c</field>
        <operation>equals</operation>
        <value>Week</value>
    </filters>
    <filters>
        <field>KimbleOne__Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <filters>
        <field>KimbleOne__StartDate__c</field>
        <operation>lessOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>KimbleOne__BusinessUnitGroup__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>VR027 Open Weeks</label>
    <language>en_US</language>
</ListView>